--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-light container">
         <a class="navbar-brand" href="#">
-          <img src="images/icon/Logo.png" width="150" height="50" alt="" loading="lazy">
+          <img src="images/icon/logo.png" width="150" height="50" alt="" loading="lazy">
         </a>
         <ul class="nav justify-content-end">
             <li class="nav-item">
@@ -61,7 +61,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="card won-card-1 d-flex justify-content-center"> 
                         <div class="card-body text-center card_text "> 
-                            <img class="my-photo-size" src="images/icon/Student.png" alt="">
+                            <img class="my-photo-size" src="images/icon/student.png" alt="">
                             <h5 class="card-title">1500+ topic</h5>
                             <p class="card-text">Learn anything</p>
                          </div>
@@ -70,7 +70,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="card won-card-1 d-flex justify-content-center"> 
                         <div class="card-body text-center card_text "> 
-                            <img class="my-photo-size" src="images/icon/Test.png" alt="">
+                            <img class="my-photo-size" src="images/icon/test.png" alt="">
                             <h5 class="card-title">1500+ topic</h5>
                             <p class="card-text">Learn anything</p>
                          </div>
@@ -79,7 +79,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="card won-card-1 d-flex justify-content-center"> 
                         <div class="card-body text-center card_text "> 
-                            <img class="my-photo-size" src="images/icon/Student.png" alt="">
+                            <img class="my-photo-size" src="images/icon/students.png" alt="">
                             <h5 class="card-title">1500+ topic</h5>
                             <p class="card-text">Learn anything</p>
                          </div>
@@ -93,7 +93,7 @@
                 <div class="col-md-4">
                     <div class="card won-card-2 d-flex"> 
                         <div class="card-body card_text "> 
-                            <img class="my-photo-size" src="images/photos/Morder pyschology.png" alt="">
+                            <img class="my-photo-size" src="images/photos/morder pyschology.png" alt="">
                             <h5 class="card-title">Modern Psycholgy</h5>
                             <p class="card-text">Designation</p>
                             <button type="button" class="btn btn-success my-btn">Buy Course</button>
@@ -114,7 +114,7 @@
                 <div class="col-md-4">
                     <div class="card won-card-2 d-flex"> 
                         <div class="card-body card_text "> 
-                            <img class="my-photo-size" src="images/photos/Morder psyc.png" alt="">
+                            <img class="my-photo-size" src="images/photos/morder psyc.png" alt="">
                             <h5 class="card-title">Modern Psycholgy</h5>
                             <p class="card-text">Designation</p>
                             <button type="button" class="btn btn-success my-btn">Buy Course</button>
@@ -135,7 +135,7 @@
                 <div class="col-md-4">
                     <div class="card won-card-2 d-flex"> 
                         <div class="card-body card_text "> 
-                            <img class="my-photo-size" src="images/photos/Morder pychons.png" alt="">
+                            <img class="my-photo-size" src="images/photos/morder pychons.png" alt="">
                             <h5 class="card-title">Modern Psycholgy</h5>
                             <p class="card-text">Designation</p>
                             <button type="button" class="btn btn-success my-btn">Buy Course</button>
@@ -159,7 +159,7 @@
             <div class="text-align-center-2"><h2>Testimonial</h2></div>
             <div class="row testi-pad">
                 <div class="col-md-4">
-                        <img class="my-photo-size-man" src="images/photos/Man.png" alt="">
+                        <img class="my-photo-size-man" src="images/photos/man.png" alt="">
                 </div>
                 <div class="col-md-8">
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
