--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="col-md-4">
                     <div class="card won-card-2 d-flex"> 
                         <div class="card-body card_text "> 
-                            <img class="my-photo-size" src="images/photos/morder pyschology.png" alt="">
+                            <img class="my-photo-size" src="images/photos/morder-pyschology.png" alt="">
                             <h5 class="card-title">Modern Psycholgy</h5>
                             <p class="card-text">Designation</p>
                             <button type="button" class="btn btn-success my-btn">Buy Course</button>
@@ -114,7 +114,7 @@
                 <div class="col-md-4">
                     <div class="card won-card-2 d-flex"> 
                         <div class="card-body card_text "> 
-                            <img class="my-photo-size" src="images/photos/morder psyc.png" alt="">
+                            <img class="my-photo-size" src="images/photos/morder-psyc.png" alt="">
                             <h5 class="card-title">Modern Psycholgy</h5>
                             <p class="card-text">Designation</p>
                             <button type="button" class="btn btn-success my-btn">Buy Course</button>
@@ -135,7 +135,7 @@
                 <div class="col-md-4">
                     <div class="card won-card-2 d-flex"> 
                         <div class="card-body card_text "> 
-                            <img class="my-photo-size" src="images/photos/morder pychons.png" alt="">
+                            <img class="my-photo-size" src="images/photos/morder-pychons.png" alt="">
                             <h5 class="card-title">Modern Psycholgy</h5>
                             <p class="card-text">Designation</p>
                             <button type="button" class="btn btn-success my-btn">Buy Course</button>
@@ -211,7 +211,7 @@
                   </div>
             </div>
             <div class="footer_bottom text-center p-2">
-                <p> Copyright © 2020 sonjoybarmon19@gmail.com </p>
+                <p> Copyright © 2020 Programming-hero.com </p>
             </div>
         </div>
     </footer>
